<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_switch_text"
                android:id="@+id/accept_invitation"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/about_invitation"
                android:text="@string/invitation_dummy_info"
                android:layout_above="@+id/accept_invitation"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/invitation_dummy_time_start"
                android:id="@+id/invitation_time_start"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/invitation_dummy_time_left"
                android:id="@+id/invitation_time_left"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/accept_invitation" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
