<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/event_title"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_location"
        android:layout_below="@+id/event_title"
        android:layout_alignParentStart="true"
        android:hint="@string/event_location_hint"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/time_text"
        android:layout_alignParentEnd="true"
        android:enabled="false"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_event_start_time"
        android:id="@+id/start_time_label"
        android:layout_below="@+id/event_location"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        android:id="@+id/set_time"
        android:layout_below="@+id/start_time_label"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/start_time"
        android:layout_alignBottom="@+id/set_time"
        android:layout_alignEnd="@+id/time_text"
        android:layout_toEndOf="@+id/set_time"
        android:layout_alignStart="@+id/time_text"
        android:enabled="false"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_date"
        android:id="@+id/set_date"
        android:layout_below="@+id/set_time"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/start_date"
        android:layout_below="@+id/start_time"
        android:layout_alignEnd="@+id/start_time"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_event_accept_deadline"
        android:id="@+id/deadline_label"
        android:layout_below="@+id/set_date"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        android:id="@+id/set_deadline_time"
        android:layout_below="@+id/deadline_label"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/deadline_time"
        android:layout_above="@+id/set_deadline_date"
        android:layout_alignStart="@+id/start_date"
        android:enabled="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_date"
        android:id="@+id/set_deadline_date"
        android:layout_below="@+id/set_deadline_time"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/deadline_date"
        android:layout_below="@+id/deadline_time"
        android:layout_alignEnd="@+id/deadline_time"
        android:enabled="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_below="@+id/set_deadline_date"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/deadline_date"
        android:hint="@string/new_event_description_hint"
        android:lines="2"
        android:maxLines="2"
        android:paddingTop="10dp"
        android:gravity="left"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_event"
        android:id="@+id/create_event"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/deadline_date"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/minimum_number_of_people_label"
        android:id="@+id/minimum_number_of_people"
        android:layout_below="@+id/description"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/minimum_people"
        android:layout_below="@+id/description"
        android:layout_toEndOf="@+id/minimum_number_of_people"
        android:layout_marginStart="22dp" />


</RelativeLayout>
    <!--xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_create_event"
    tools:context="michrosoft.com.hackathon2015.CreateEventActivity" -->